@@ -2,6 +2,7 @@ h2. 2009-12-09
 
 * [CHANGED] Wind Chill is in the graph now
 * [NEW] prototype of mobile site at http://m.weatherham.com
+* [NEW] trying out barometer direction
 
 h2. 2009-12-07
 
